// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toast [snapshot] > empty container 1`] = `
<div
  aria-label="Notifications ()"
  class="vesper-toasts-container"
  role="region"
>
  <span
    aria-atomic="false"
    class="vesper-toast-announcer"
    role="status"
  />
</div>
`;

exports[`toast [snapshot] > multiple toasts 1`] = `
<div
  aria-label="Notifications ()"
  class="vesper-toasts-container"
  role="region"
>
  <span
    aria-atomic="false"
    class="vesper-toast-announcer"
    role="status"
  >
    Third
  </span>
  <div
    class="vesper-toast-wrapper"
  >
    <div
      class="vesper-toast vesper-toast-active vesper-toast-default"
      data-state="active"
      tabindex="0"
    >
      <div
        class="vesper-toast-content"
      >
        <span
          class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
        >
          First
        </span>
        <button
          aria-label="Dismiss"
          class="vesper-toast-close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="vesper-toast-wrapper"
  >
    <div
      class="vesper-toast vesper-toast-active vesper-toast-success"
      data-state="active"
      tabindex="0"
    >
      <div
        class="vesper-toast-content"
      >
        <svg
          aria-hidden="true"
          class="vesper-toast-icon"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM16.2402 8.2959L9.79102 14.4355H9.7793L7.75977 12.5127L7.58691 12.3486L7.41504 12.5127L6.82715 13.0713L6.6377 13.252L6.82715 13.4336L9.16406 15.6572L9.23633 15.7266H10.334L10.4062 15.6572L17.1729 9.2168L17.3623 9.03516L17.1729 8.85449L16.585 8.2959L16.4131 8.13184L16.2402 8.2959Z"
            fill="currentColor"
          />
        </svg>
        <span
          class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
        >
          Second
        </span>
        <button
          aria-label="Dismiss"
          class="vesper-toast-close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
  <div
    class="vesper-toast-wrapper"
  >
    <div
      class="vesper-toast vesper-toast-active vesper-toast-danger"
      data-state="active"
      tabindex="0"
    >
      <div
        class="vesper-toast-content"
      >
        <svg
          aria-hidden="true"
          class="vesper-toast-icon"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            clip-rule="evenodd"
            d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
            fill="currentColor"
            fill-rule="evenodd"
          />
        </svg>
        <span
          class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
        >
          Third
        </span>
        <button
          aria-label="Dismiss"
          class="vesper-toast-close-button"
          type="button"
        >
          <svg
            aria-hidden="true"
            fill="none"
            viewBox="0 0 24 24"
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
              fill="currentColor"
            />
          </svg>
        </button>
      </div>
    </div>
  </div>
</div>
`;

exports[`toast [snapshot] > variant: danger 1`] = `
<div
  class="vesper-toast-wrapper"
>
  <div
    class="vesper-toast vesper-toast-active vesper-toast-danger"
    data-state="active"
    tabindex="0"
  >
    <div
      class="vesper-toast-content"
    >
      <svg
        aria-hidden="true"
        class="vesper-toast-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M21 8V16L16 21H8L3 16V8L8 3H16L21 8ZM11.4932 15.2422L10.9766 15.7578V16.7881L11.4932 17.3027H12.5264L13.042 16.7881V15.7578L12.5264 15.2422H11.4932ZM11.2354 7L10.7188 7.51562L11.2354 13.6973L11.751 14.2119H12.2676L12.7842 13.6973L13.3008 7.51562L12.7842 7H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
      >
        danger toast message
      </span>
      <button
        aria-label="Dismiss"
        class="vesper-toast-close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast [snapshot] > variant: default 1`] = `
<div
  class="vesper-toast-wrapper"
>
  <div
    class="vesper-toast vesper-toast-active vesper-toast-default"
    data-state="active"
    tabindex="0"
  >
    <div
      class="vesper-toast-content"
    >
      <span
        class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
      >
        default toast message
      </span>
      <button
        aria-label="Dismiss"
        class="vesper-toast-close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast [snapshot] > variant: loading 1`] = `
<div
  class="vesper-toast-wrapper"
>
  <div
    class="vesper-toast vesper-toast-active vesper-toast-loading"
    data-state="active"
    tabindex="0"
  >
    <div
      class="vesper-toast-content"
    >
      <svg
        aria-hidden="true"
        class="vesper-toast-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M3 12C3 7.02944 7.02944 3 12 3C13.695 3 15.2833 3.46953 16.6387 4.28613C17.1117 4.57117 17.2645 5.18613 16.9795 5.65918C16.6944 6.1321 16.0794 6.28403 15.6064 5.99902C14.5539 5.36492 13.3211 5 12 5C8.13401 5 5 8.13401 5 12C5 15.866 8.13401 19 12 19C15.866 19 19 15.866 19 12C19 11.4477 19.4477 11 20 11C20.5523 11 21 11.4477 21 12C21 16.9706 16.9706 21 12 21C7.02944 21 3 16.9706 3 12Z"
          fill="currentColor"
        />
      </svg>
      <span
        class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
      >
        loading toast message
      </span>
      <button
        aria-label="Dismiss"
        class="vesper-toast-close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast [snapshot] > variant: success 1`] = `
<div
  class="vesper-toast-wrapper"
>
  <div
    class="vesper-toast vesper-toast-active vesper-toast-success"
    data-state="active"
    tabindex="0"
  >
    <div
      class="vesper-toast-content"
    >
      <svg
        aria-hidden="true"
        class="vesper-toast-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M12 2C17.5228 2 22 6.47715 22 12C22 17.5228 17.5228 22 12 22C6.47715 22 2 17.5228 2 12C2 6.47715 6.47715 2 12 2ZM16.2402 8.2959L9.79102 14.4355H9.7793L7.75977 12.5127L7.58691 12.3486L7.41504 12.5127L6.82715 13.0713L6.6377 13.252L6.82715 13.4336L9.16406 15.6572L9.23633 15.7266H10.334L10.4062 15.6572L17.1729 9.2168L17.3623 9.03516L17.1729 8.85449L16.585 8.2959L16.4131 8.13184L16.2402 8.2959Z"
          fill="currentColor"
        />
      </svg>
      <span
        class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
      >
        success toast message
      </span>
      <button
        aria-label="Dismiss"
        class="vesper-toast-close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast [snapshot] > variant: warning 1`] = `
<div
  class="vesper-toast-wrapper"
>
  <div
    class="vesper-toast vesper-toast-active vesper-toast-warning"
    data-state="active"
    tabindex="0"
  >
    <div
      class="vesper-toast-content"
    >
      <svg
        aria-hidden="true"
        class="vesper-toast-icon"
        fill="none"
        viewBox="0 0 24 24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          clip-rule="evenodd"
          d="M22 18.5537L20.876 20.5H3.10352L2 18.5898L10.9658 3.5H13.0557L22 18.5537ZM11.4932 16.2422L10.9766 16.7578V17.7881L11.4932 18.3027H12.5264L13.042 17.7881V16.7578L12.5264 16.2422H11.4932ZM11.2354 8L10.7188 8.51562L11.2354 14.6973L11.751 15.2119H12.2676L12.7842 14.6973L13.3008 8.51562L12.7842 8H11.2354Z"
          fill="currentColor"
          fill-rule="evenodd"
        />
      </svg>
      <span
        class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
      >
        warning toast message
      </span>
      <button
        aria-label="Dismiss"
        class="vesper-toast-close-button"
        type="button"
      >
        <svg
          aria-hidden="true"
          fill="none"
          viewBox="0 0 24 24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M20 4.94141L13.7373 11.2041V12.7959L20 19.0586L19.0586 20L12.7959 13.7373H11.2041L4.94141 20L4 19.0586L10.2627 12.7959V11.2041L4 4.94141L4.94141 4L11.2041 10.2627H12.7959L19.0586 4L20 4.94141Z"
            fill="currentColor"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;

exports[`toast [snapshot] > with action 1`] = `
<div
  class="vesper-toast-wrapper"
>
  <div
    class="vesper-toast vesper-toast-active vesper-toast-default"
    data-state="active"
    tabindex="0"
  >
    <div
      class="vesper-toast-content"
    >
      <span
        class="vesper-typography vesper-typography-copy-sm vesper-toast-children"
      >
        Toast with action
      </span>
    </div>
    <div
      class="vesper-toast-buttons"
    >
      <button
        class="vesper-button vesper-button-xs vesper-button-ghost"
        type="button"
      >
        Dismiss
      </button>
      <button
        class="vesper-button vesper-button-xs vesper-button-contrast"
        type="button"
      >
        Undo
      </button>
    </div>
  </div>
</div>
`;
